--- a/homework_1_basicTagHTML/text2.html
+++ b/homework_1_basicTagHTML/text2.html
@@ -38,8 +38,8 @@
         <li>Item 4</li>
         <li>Item 5</li>
     </ul>
-    <p><b>THIS TEXT IS BOLD</b></p>
-    <p><i>THIS TEXT IS ITALIC</i></p>
+    <p style="font-weight: bold;">THIS TEXT IS BOLD</p>
+    <p style="font-style: italic;">THIS TEXT IS ITALIC</p>
 </body>
 
 </html>
