--- a/homework_1_basicTagHTML/text4.html
+++ b/homework_1_basicTagHTML/text4.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: white; color: black;">
     <table width="100%" >
         <tr align="center">
             <td><p><b>Fresh Fruits</b></p></td>
