--- a/homework_2_Padding_Margin/baitap5.html
+++ b/homework_2_Padding_Margin/baitap5.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="box-sizing: border-box; width: 320px; background-color: black; color: white; padding: 10px 20px;">
+    <div style="box-sizing: border-box; width: 320px; background-color: black; color: white; padding: 10px 20px; display: inline-block;">
         <div style="font-size: 30px;">
             404
         </div>
@@ -25,6 +25,23 @@
             </ul>
         </div>
     </div>
-    
+    <div style="box-sizing: border-box; width: 320px; background-color: black; color: white; padding: 10px 20px; display: inline-block;">
+        <div style="font-size: 30px;">
+            404
+        </div>
+        <div style=""> 
+            I'm afraid you've found a page that doesn't exist on CodePen. That can happen when you follow a link to something that has since been deleted. Or the link was incorrect to begin with.
+            <br>
+            <br>
+            Sorry about that. We've logged the error for review, in case it's our fault.
+        </div>
+        <div>
+            <ul>
+                <li><a href="https://codepen.io/" style="color: blue;">Go to the homepage</a></li>
+                <li><a href="https://codepen.io/" style="color: blue;">Contact Support</a></li>
+                <li><a href="https://codepen.io/" style="color: blue;">Visit Documentation</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
