--- a/homework_2_Padding_Margin/baitap3.html
+++ b/homework_2_Padding_Margin/baitap3.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="/anh/sanpham.jpg" alt="" style="width: 300px;">
+    <div style="background-color: white; width: fit-content; color: black;">
+        <img src="./anh/sanpham.jpg" alt="" style="width: 300px;">
         <div style="box-sizing: border-box; width: 300px; padding: 0px 10px 0px 10px;"  >
             <p style="margin: 5px 0px;">Chân váy xếp ly Tennis dáng ngắn xoè đẹp nhất ngành (ảnh và video thật)</p>
             <div  style="display: inline-block; background-color: orange; color: white;">
