--- a/homework_3_padding_margin/baitap2.html
+++ b/homework_3_padding_margin/baitap2.html
@@ -16,7 +16,7 @@
                 STUDIO
             </div>
         </div> 
-        <div style="width: 50 style="font-size: 16px;"%">
+        <div style="width: 52%">
             Quickly incentivize impactful action items before tactical collaboration and idea-sharing. Monotonically engage market-driven intellectual capital through wireless opportunities. Progressively network performance based services for functionalized testing procedures.
         </div>
         <div style="padding: 30px 0px 60px;">
