--- a/Homework/homework_4_form/baitap3.html
+++ b/Homework/homework_4_form/baitap3.html
@@ -12,26 +12,38 @@
     <div style="width: 100%; height: fit-content;
                 background: #c2e59c;
                 background: linear-gradient(to right, #64b3f4, #c2e59c);
-                color: rgb(35, 18, 109)">
+                color: rgb(35, 18, 109);
+                font-family: Helvetica;">
         <div style="width: fit-content; margin: 0px auto; padding-bottom: 10px;">
             <div style="text-align: center;  padding: 10px 0px;">
                 <h1>Get Started</h1>
                 <p>Let's make something cool!</p>
             </div>
-            <div style="border-radius: 25px; background-color: white; padding: 25px 10px;">
+            <div style="border-radius: 10px; background-color: white; padding: 25px 10px;">
                 <form action="">
                     <h2>Get started with a free quotation</h2>
                     <p>Name</p>
                     <input style="border: none; background-color: #cedae4;
-                                border-radius: 2px;" type="text" name="" id="">
+                                border-radius: 2px;
+                                width: 90%;
+                                padding: 5px 5px;" type="text" name="" id="" placeholder="Enter your name">
                     <p>Email</p>
                     <input style="border: none; background-color: #cedae4;
-                                border-radius: 2px;" type="email" name="" id="">
+                                border-radius: 2px;
+                                width: 90%;
+                                padding: 5px 5px;" type="email" name="" id="" placeholder="Enter a valid email address">
                     <p>Message</p>
-                    <textarea style="display: block; border: none; background-color: #cedae4;
-                    border-radius: 5px;" name="" id="" cols="30" rows="10"></textarea>
-                    <input style="display: inline-block;" type="checkbox" name="" id="">
-                    <p style="display: inline-block;">I accept the Terms of Servive</p>
+                    <textarea style="display: block;
+                                    border: none;
+                                    background-color: #cedae4;
+                                    border-radius: 5px;
+                                    width: 90%;
+                                    padding: 5px 5px;
+                                    resize: none;" name="" id="" cols="30" rows="5" placeholder="Enter your Message"></textarea>
+                    <div>
+                        <input style="display: inline-block;" type="checkbox" name="" id="">
+                        <p style="display: inline-block;" >I accept the Terms of Servive</p>
+                    </div>
                 </form>
             </div>
         </div>
