--- a/Homework/homework_5_css/baitap3.html
+++ b/Homework/homework_5_css/baitap3.html
@@ -5,12 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style_baitap3.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/ff0503d739.js" crossorigin="anonymous"></script>
+    <title>bai 3</title>
 </head>
 <body>
     <div id="full">
-        <div id="div_left" class = "content"></div>
-        <div id="div_right" class = "content"></div>
+        <div id="div_left" class = "content">
+            <div id="title_left">
+                <p>HOW WE HELP</p>
+            </div>
+            <div id="content_left">
+                <p>We capture value across boundaries and between the silos of any organization</p>
+            </div>
+        </div>
+        <div id="div_right" class = "content">
+            <div id="title_right">
+                <p>We bring deep, functional expertise</p>
+            </div>
+            <div id="content_right">
+                <p>
+                    Podcasting operational change management inside of workflows to establish a framework. 
+                    Taking seamless key performance indicators offline to maximise the long tail. 
+                    Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
+                </p>
+            </div>
+            <div id="icon_right">
+                <i style="padding-right: 20px;" class="fa-brands fa-facebook-f"></i>
+                <i style="padding-right: 20px;" class="fa-brands fa-twitter" ></i>
+                <i style="padding-right: 20px;" class="fa-brands fa-instagram" ></i>
+            </div>
+        </div>
 
     </div>
 </body>
