--- a/Homework/homework_6_csslayout/baitap3.html
+++ b/Homework/homework_6_csslayout/baitap3.html
@@ -5,23 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Cau2.css">
+    <link rel="stylesheet" href="./style_bt3.css">
 </head>
 <body>
-    <div class="container">
-        <div class="container_item1"></div>
-        <div class="container_item2"></div>
-        <div class="container_item3">
-            <img class="image" src="https://images01.nicepage.com/c461c07a441a5d220e8feb1a/de3a32d1afdb595687d72735/8ae73f64-3e5f-c818-6e56-109610e59476.jpg" alt="ad">
+    <div id="all">
+        <div class="header"></div>
+        <div class="sidebar"></div>
+        <div class="image">
+            <img src="./assets/Image/orange.jpg" alt="">
         </div>
-        <div class="container_item4">
-            <div class="heading">
-                MEAL IDEAS
-            </div>
-            <div class="content">How to Lose Weight Fast in 3 Simple Steps</div>
-            <div class="footer">
-                <span>Images from</span> <span style="text-decoration-line: underline;">Freepik</span>
-            </div>
+        <div class="content">
+            <p id="title">MEAL IDEAS</p>
+            <p id="content_pa">How to Lose Weight Fast in 3 Simple Steps</p>
         </div>
     </div>
 </body>
