--- a/Homework/homework_7_pseudoClasses/baitap2.html
+++ b/Homework/homework_7_pseudoClasses/baitap2.html
@@ -9,24 +9,32 @@
 </head>
 <body>
     <div id="menu">
-        <div class="item_menu">Home</div>
-        <div class="item_menu">About</div>
-        <div class="item_menu">Service</div>
-        <div class="item_menu">Team</div>
-        <div id="title">SORA GALLERY</div>
+        <div class="item_menu">
+            <p class="content_menu">Home</p>
+        </div>
+        <div class="item_menu">
+            <p class="content_menu">About</p>
+        </div>
+        <div class="item_menu">
+            <p class="content_menu">Service</p>
+        </div>
+        <div class="item_menu">
+            <p class="content_menu">Team</p>
+        </div>
+        <div id="title">Vũ Hồng Sơn</div>
     </div>
     <div id="Img_list">
         <div class="item_listImg">
-            <div id="box1" class="boxChild"></div>
+            <div id="box1" class="boxChild"><span>Star</span></div>
         </div>
         <div class="item_listImg">
-            <div id="box2" class="boxChild"></div>
+            <div id="box2" class="boxChild"><span>Sun</span></div>
         </div>
         <div class="item_listImg">
-            <div id="box3" class="boxChild"></div>
+            <div id="box3" class="boxChild"><span>Tree</span></div>
         </div>
         <div class="item_listImg">
-            <div id="box4" class="boxChild"></div>
+            <div id="box4" class="boxChild"><span>Sky</span></div>
         </div>
     </div>
     
