--- a/OnClass/BuoiX/bt1.html
+++ b/OnClass/BuoiX/bt1.html
@@ -8,18 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item">
-            <img src="../../Homework/assets/ImgBuoiX/1.jpg" alt="">
-        </div>
-        <div class="item">
-            <img src="../../Homework/assets/ImgBuoiX/2.jpg" alt="">
-        </div>
-        <div class="item">
-            <img src="../../Homework/assets/ImgBuoiX/3.jpg" alt="">
-        </div>
-        <div class="item">
-            <img src="../../Homework/assets/ImgBuoiX/4.jpg" alt="">
+    <div class="ground">
+        <div class="container">
+            <div class="item">
+                <img src="../../Homework/assets/ImgBuoiX/1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../../Homework/assets/ImgBuoiX/2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../../Homework/assets/ImgBuoiX/3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../../Homework/assets/ImgBuoiX/4.jpg" alt="">
+            </div>
         </div>
     </div>
 </body>
