--- a/Homework/homework_X_flex/bt1.html
+++ b/Homework/homework_X_flex/bt1.html
@@ -17,8 +17,12 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="item_title"></div>
-            <div class="item_body"></div>
+            <div class="item_content">
+                <div class="item_content_title">Web designing</div>
+                <div class="item_content_body">Prototyping</div>
+                <div class="item_content_progress">Progress</div>
+                <div class="item_content_progressLine"></div>
+            </div>
             <div class="item_footer">
                 <div class="item_footer_left"></div>
                 <div class="item_footer_right"></div>
@@ -32,8 +36,10 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="item_title"></div>
-            <div class="item_body"></div>
+            <div class="item_content">
+                <div class="item_content_title">Testing</div>
+                <div class="item_content_body">Prototyping</div>
+            </div>
             <div class="item_footer">
                 <div class="item_footer_left"></div>
                 <div class="item_footer_right"></div>
@@ -47,8 +53,10 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="item_title"></div>
-            <div class="item_body"></div>
+            <div class="item_content">
+                <div class="item_content_title">Svg Animations</div>
+                <div class="item_content_body">Prototyping</div>
+            </div>
             <div class="item_footer">
                 <div class="item_footer_left"></div>
                 <div class="item_footer_right"></div>
