--- a/Homework/homework_X_flex/bt1.html
+++ b/Homework/homework_X_flex/bt1.html
@@ -21,11 +21,24 @@
                 <div class="item_content_title">Web designing</div>
                 <div class="item_content_body">Prototyping</div>
                 <div class="item_content_progress">Progress</div>
-                <div class="item_content_progressLine"></div>
+                <div class="item_content_progressLine1"></div>
+                <div class="item_content_progressNum">60%</div>
             </div>
-            <div class="item_footer">
-                <div class="item_footer_left"></div>
-                <div class="item_footer_right"></div>
+            <div class="item_footer footer1">
+                <div class="item_footer_left">
+                    <div class="item_footer_left_img">
+                        <img src="../assets/Img/hw8_1.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img choosen_one">
+                        <img src="../assets/Img/hw8_3.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img">
+                        +
+                    </div>
+                </div>
+                <div class="item_footer_right">
+                    2 Days Left
+                </div>
             </div>
 
         </div>
@@ -39,10 +52,25 @@
             <div class="item_content">
                 <div class="item_content_title">Testing</div>
                 <div class="item_content_body">Prototyping</div>
+                <div class="item_content_progress">Progress</div>
+                <div class="item_content_progressLine2"></div>
+                <div class="item_content_progressNum">50%</div>
             </div>
-            <div class="item_footer">
-                <div class="item_footer_left"></div>
-                <div class="item_footer_right"></div>
+            <div class="item_footer footer2">
+                <div class="item_footer_left">
+                    <div class="item_footer_left_img">
+                        <img src="../assets/Img/hw8_1.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img choosen_one">
+                        <img src="../assets/Img/hw8_3.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img">
+                        +
+                    </div>
+                </div>
+                <div class="item_footer_right">
+                    2 Days Left
+                </div>
             </div>
 
         </div>
@@ -56,10 +84,25 @@
             <div class="item_content">
                 <div class="item_content_title">Svg Animations</div>
                 <div class="item_content_body">Prototyping</div>
+                <div class="item_content_progress">Progress</div>
+                <div class="item_content_progressLine3"></div>
+                <div class="item_content_progressNum">80%</div>
             </div>
-            <div class="item_footer">
-                <div class="item_footer_left"></div>
-                <div class="item_footer_right"></div>
+            <div class="item_footer footer3">
+                <div class="item_footer_left">
+                    <div class="item_footer_left_img">
+                        <img src="../assets/Img/hw8_1.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img choosen_one">
+                        <img src="../assets/Img/hw8_3.jpeg" alt="">
+                    </div>
+                    <div class="item_footer_left_img">
+                        +
+                    </div>
+                </div>
+                <div class="item_footer_right">
+                    2 Days Left
+                </div>
             </div>
 
         </div>
