--- a/Homework/homework_X_flex/bt3.html
+++ b/Homework/homework_X_flex/bt3.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style_bt3.css">
+    <script src="https://kit.fontawesome.com/ff0503d739.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="item">
+            <div class="item_up">
+                <div class="item_up_left">
+                    <img src="./assets/Img/1.jpg" alt="">
+                </div>
+                <div class="item_up_right">
+                    <div class="button_container">
+                        <div class="item_up_right_button">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                        </div>
+                        <div class="item_up_right_button">
+                            <i class="fa-solid fa-share-from-square fa-1x"></i>
+                        </div>
+                        <div class="item_up_right_button">
+                            <i class="fa-solid fa-circle-arrow-left fa-1x"></i>
+                        </div>
+                        <div class="item_up_right_button">
+                            <i class="fa-solid fa-circle-arrow-right fa-1x"></i>
+                        </div>
+                        <div class="item_up_right_button button_play">
+                            <i class="fa-solid fa-circle-play fa-3x"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item_down"></div>
+        </div>
+    </div>
 </body>
 </html>
