--- a/Homework/nhap/index.html
+++ b/Homework/nhap/index.html
@@ -3,13 +3,13 @@
 <html>
   <head>
     <title>Page Title</title>
+    
+    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
-    <h1>The Main Heading</h1>
-
-    <h2>A catchy subheading</h2>
-
-    <p>First paragraph</p>
+    <button onclick="alert('Button hiện cảnh báo!');">
+      Hiện cảnh báo
+  </button>
   </body>
 </html>
