--- a/Homework/Homework_X3_animation/bt3.html
+++ b/Homework/Homework_X3_animation/bt3.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style_bt3.css">
+    <script src="https://kit.fontawesome.com/ff0503d739.js" crossorigin="anonymous"></script>
     <title>Document</title>
-    
 </head>
 <body>
-    
+    <div class="container">
+        <ul class="menu">
+            <li class="menu_item item_6"><a href="https://www.facebook.com/">Facebook</a></li>
+            <li class="menu_item item_5"><a href="https://www.youtube.com/">Youtube</a></li>
+            <li class="menu_item item_4"><a href="https://twitter.com/">Twitter</a></li>
+            <li class="menu_item item_3"><a href="https://www.instagram.com/">Instagram</a></li>
+            <li class="menu_item item_2"><a href="https://www.tiktok.com/">Tiktok</a></li>
+            <li class="menu_item item_1"><a href="https://www.linkedin.com/">Linkedin</a></li>
+        </ul>
+    </div>
 </body>
 </html>
